# oca-repair

./: README.md
base_repair_config/: README.rst
partner_repair_button/: README.rst
repair_comment_template/: README.rst
repair_comment_template/i18n/: repair_comment_template.pot
repair_line_sequence/: README.rst  __init__.py  __manifest__.py  hooks.py
repair_line_sequence/models/: __init__.py  repair_line.py
repair_line_sequence/readme/: CONTEXT.md  CONTRIBUTORS.md  DESCRIPTION.md  USAGE.md
repair_line_sequence/tests/: __init__.py
repair_line_sequence/views/: repair_order_views.xml
repair_order_group/: README.rst  __init__.py  __manifest__.py  const.py
repair_order_group/data/: res_company_data.xml
repair_order_group/i18n/: it.po
repair_order_group/models/: __init__.py  repair_order.py  res_company.py  res_config_settings.py
repair_order_group/readme/: CONTRIBUTORS.md  DESCRIPTION.md  USAGE.md
repair_order_group/security/: ir.model.access.csv
repair_order_group/tests/: test_repair_order_group.py
repair_order_group/views/: repair_order_views.xml  res_config_settings_views.xml
repair_order_group_services/: README.rst
repair_order_group_services/i18n/: it.po
repair_order_line_sequence/: README.rst
repair_order_product_by_lot/: README.rst
repair_order_product_by_lot/i18n/: it.po
repair_order_product_by_lot/models/: repair_order.py
repair_order_product_by_lot/readme/: USAGE.md
repair_order_template/: README.rst  __manifest__.py
repair_order_template/i18n/: repair_order_template.pot  tr.po
repair_order_template/models/: repair_order_template.py  repair_order_template_line.py
repair_order_template/views/: repair_order_template.xml
repair_picking_after_done/: README.rst  __manifest__.py
repair_picking_after_done/i18n/: it.po  repair_picking_after_done.pot
repair_picking_after_done/models/: repair.py
repair_picking_after_done/readme/: CONTRIBUTORS.md
repair_quality_control/: README.rst  __manifest__.py
repair_quality_control/models/: repair.py
repair_quotation_manual_sync/: README.rst
repair_scheduled_date_calendar_view/: README.rst  __manifest__.py
repair_service/: README.rst  __manifest__.py
repair_stock/: README.rst  __manifest__.py
repair_timesheet/: README.rst
repair_type_product_destination/: README.rst
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+43 files in other folders)
