[project]
name = "odoo-addons-oca-repair"
version = "18.0.20251013.0"
dependencies = [
    "odoo-addon-base_repair_config==18.0.*",
    "odoo-addon-partner_repair_button==18.0.*",
    "odoo-addon-repair_quality_control==18.0.*",
    "odoo-addon-repair_service==18.0.*",
    "odoo-addon-repair_stock==18.0.*",
    "odoo-addon-repair_timesheet==18.0.*",
    "odoo-addon-repair_type==18.0.*",
    "odoo-addon-repair_type_product_destination==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
