[project]
name = "odoo-addons-oca-repair"
version = "18.0.20251215.1"
dependencies = [
    "odoo-addon-base_repair_config==18.0.*",
    "odoo-addon-partner_repair_button==18.0.*",
    "odoo-addon-repair_order_group==18.0.*",
    "odoo-addon-repair_order_line_sequence==18.0.*",
    "odoo-addon-repair_order_product_by_lot==18.0.*",
    "odoo-addon-repair_order_template==18.0.*",
    "odoo-addon-repair_picking_after_done==18.0.*",
    "odoo-addon-repair_quality_control==18.0.*",
    "odoo-addon-repair_scheduled_date_calendar_view==18.0.*",
    "odoo-addon-repair_service==18.0.*",
    "odoo-addon-repair_stock==18.0.*",
    "odoo-addon-repair_timesheet==18.0.*",
    "odoo-addon-repair_type==18.0.*",
    "odoo-addon-repair_type_product_destination==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
